<resources>
    <string name="app_name">Теле.Задача</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Авторизация</string>
    <string name="fio">ФИО</string>
    <string name="email">Почта</string>
    <string name="phone">номер телефона</string>
    <string name="next">Далее</string>
    <string name="registration">Регистрация</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_note">Добавление\nзаметки</string>
    <string name="date">Дата</string>
    <string name="change_theme">Сменить тему</string>
    <string name="night">Темная</string>
    <string name="settings">Настройки</string>
    <string name="tasks">Задачи</string>
    <string name="add_task">Добавление\nзадачи</string>
    <string name="make">Создать</string>
    <string name="select_user">Выберите пользователя</string>
</resources>