<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:textSize="30sp"
            android:fontFamily="@font/qanelas"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <TextView
            android:id="@+id/description"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/qanelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/date"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/qanelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>