<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tasks.SelectUserTaskFragment">

    <View
        android:id="@+id/blockView"
        style="@style/blockMain"
        android:layout_width="320sp"
        android:layout_height="350sp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toTopOf="@+id/blockView" />

    <ImageButton
        android:id="@+id/nextAddTaskButton"
        android:layout_width="188dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_next"
        android:foreground="@drawable/pressedbtnnext"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/popupButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/qanelas"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/nextAddTaskButton"
        app:layout_constraintEnd_toEndOf="@+id/nextAddTaskButton"
        app:layout_constraintStart_toStartOf="@+id/nextAddTaskButton"
        app:layout_constraintTop_toTopOf="@+id/nextAddTaskButton" />

    <Button
        android:id="@+id/popupButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/qanelas"
        android:text="@string/select_user"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>