<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <View
        android:id="@+id/blockView"
        style="@style/blockMain"
        android:layout_width="320sp"
        android:layout_height="400dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authTextView"
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/auth"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toTopOf="@+id/blockView" />

    <EditText
        android:id="@+id/phoneEditText"
        style="@style/EditText"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="Номер телефона"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@id/authTextView"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        tools:layout_editor_absoluteY="226dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        style="@style/EditText"
        android:ems="10"
        android:hint="Почта"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <ImageButton
        android:id="@+id/signInButton"
        android:layout_width="188dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_next"
        android:foreground="@drawable/pressedbtnnext"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/nextTextView"
        style="@style/RegistrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:fontFamily="@font/qanelas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="@+id/signInButton"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toTopOf="@+id/signInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>