<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">


    <View
        android:id="@+id/blockView"
        style="@style/blockMain"
        android:layout_width="320sp"
        android:layout_height="430sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/authTextView"
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toTopOf="@+id/blockView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        style="@style/blockSettings"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/authTextView">

        <TextView
            android:id="@+id/changeThemeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="@font/qanelas"
            android:textColor="@color/white"
            android:text="@string/change_theme" />

        <Button
            style="@style/changeThemeButton"
            android:id="@+id/changeThemeButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/night" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        style="@style/blockSettings"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/blockView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/blockView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/pushTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="@font/qanelas"
            android:textColor="@color/white"
            android:text="Пуш уведомления" />

        <Switch
            android:id="@+id/pushSwitch"
            style="@style/changeThemeButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/qanelas"
            android:text="Включить"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>